<resources>
    <string name="STR_ADMIN_POLLING">Polling</string>
    <string name="STR_ADMIN_PULL">Pull</string>
    <string name="STR_ADMIN_PUSH_BACKGROUND">Push background</string>
    <string name="STR_ADMIN_PUSH_INFORMATIVE">Push Informative</string>
    <string name="STR_ADMIN_PUSH_INTERACTIVE">Push Interactive</string>
    <string name="STR_ADMIN_PUSH_WIFIBACKGROUND">Push WifiBackgroud</string>
    <string name="STR_ADMIN_RESET_REGISTER">Reset Register</string>
    <string name="STR_ANDROID_VERSION">Android version: %s</string>
    <string name="STR_APP_UPDATES">App updates</string>
    <string name="STR_APP_UPDATES_SUB">After the update, Samsung apps can be updated to the latest available version.</string>
    <string name="STR_AUTO_RESTART_AT_AB">Auto restart at</string>
    <string name="STR_BTN_CANCEL">Cancel</string>
    <string name="STR_BTN_CHANGE_TIME">Change time</string>
    <string name="STR_BTN_CONTINUE">Continue</string>
    <string name="STR_BTN_DONE">Done</string>
    <string name="STR_BTN_DOWNLOAD">Download</string>
    <string name="STR_BTN_GO_STORAGE">Go to Storage</string>
    <string name="STR_BTN_INSTALL">Install now</string>
    <string name="STR_BTN_LATER">Later</string>
    <string name="STR_BTN_OK">OK</string>
    <string name="STR_BTN_PAUSE">Pause</string>
    <string name="STR_BTN_RESUME_DOWNLOAD">Resume download</string>
    <string name="STR_BTN_SCHEDULE_INSTALL">Schedule install</string>
    <string name="STR_BTN_WIFI_SETTING">Wi-Fi settings</string>
    <string name="STR_CAUTION">Caution</string>
    <string name="STR_COMMON_LOW_BATTERY">Low battery</string>
    <string name="STR_COMMON_MEGA_BYTE">MB</string>
    <string name="STR_COMMON_PERCENT">%d%%</string>
    <string name="STR_COMMON_PLZ_WAIT">Please wait</string>
    <string name="STR_COMMON_PLZ_WAIT_SEVERAL_MINUTES">Getting ready to restart...\nThis may take several minutes.</string>
    <string name="STR_CURRENT_VERSION">Current version: %s</string>
    <string name="STR_DM_CHECKING_UPDATE">Checking for updates…</string>
    <string name="STR_DM_CONNECTING_SERVER">Connecting to server…</string>
    <string name="STR_DM_CONNECT_FAIL">Unable to update the software. A network or server error occurred. Try again later.</string>
    <string name="STR_DM_WIFI_DISCONNECTED_WIFIDEVICE">Connect to a Wi-Fi network to continue downloading the update.</string>
    <string name="STR_DOWNLOADED_SOFTWARE_DELETED">The downloaded software update will be deleted after %s. If you don\'t install the update before it\'s deleted, you\'ll need to download it again.</string>
    <string name="STR_DOWNLOADING_AND_INSTALLING_TITLE_AB">Downloading and installing</string>
    <string name="STR_DOWNLOADING_AND_INSTALLING_UPDATE_NOTI_AB">Downloading and installing update...</string>
    <string name="STR_DOWNLOADING_UPDATE">Downloading update…</string>
    <string name="STR_DOWNLOAD_AND_INSTALL_PROGRESSBAR_AB">Download and install</string>
    <string name="STR_DOWNLOAD_PAUSED">Download paused</string>
    <string name="STR_DOWNLOAD_TIME_LEFT">Time left: %s</string>
    <string name="STR_FINISHING_PREVIOUS_UPDATE">Finishing previous update...</string>
    <string name="STR_FOTA_CHARGE_YOUR_BATTERY">Charge your battery to at least %d%% to continue the update.</string>
    <string name="STR_FOTA_CONFIRM_MOBILE_DATA_FREE">Mobile data used to download this update won\'t count against your data plan.</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_DOWNLOAD_WIFI_ONLY">Connect to a Wi-Fi network to download the update.</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_MOBILE_WARNING">Downloading this update over a mobile network may result in extra charges.</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_MOBILE_WARNING_AND_WIFI_RECOMMENDATION">Using mobile data to download may result in additional charges. Using Wi-Fi is recommended.</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_ONE_UI_MAJOR">One UI %s is available.</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_ONE_UI_MINOR">A software update is available.</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_TITLE_DEVICE">Update your device</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_TITLE_PHONE">Update your phone</string>
    <string name="STR_FOTA_DOWNLOAD_CONFIRM_TITLE_TABLET">Update your tablet</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL">Download failed</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_NETWORK_DISCONNECTED_DEVICE">Your device was disconnected from the network before the download was complete. The download will continue when your device reconnects to a network.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_NETWORK_DISCONNECTED_PHONE">Your phone was disconnected from the network before the download was complete. The download will continue when your phone reconnects to a network.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_NETWORK_DISCONNECTED_TABLET">Your tablet was disconnected from the network before the download was complete. The download will continue when your tablet reconnects to a network.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_RESUME_WIFI_PHONE">Your phone is now connected to Wi-Fi.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_RESUME_WIFI_TABLET">Your tablet is now connected to Wi-Fi.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_RETRY_CONFIRM_MOBILE_ONLY">Try again later or update using Smart Switch on your computer.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_RETRY_CONFIRM_NOT_REQUIRED_NETWORK_BODY">Continue installing update?</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_RETRY_CONFIRM_NOT_REQUIRED_NETWORK_TITLE">Couldn\'t complete update</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_RETRY_CONFIRM_OSP">The update package has not been downloaded completely. Mobile networks are available. Downloading via a mobile network may result in additional charges. If possible, download via a Wi-Fi network.</string>
    <string name="STR_FOTA_DOWNLOAD_FAIL_TITLE">Couldn\'t download update</string>
    <string name="STR_FOTA_DOWNLOAD_SERVER_LIMIT_KIES">The server has reached its daily download limit. Try again tomorrow or update using %1$sSmart Switch%2$s on your computer.</string>
    <string name="STR_FOTA_EXCEEDED_MOBILE_NETWORK_FILE_SIZE_MB">The maximum file size for downloading via a mobile network (%d MB) has been exceeded. Connect to a Wi-Fi network instead.</string>
    <string name="STR_FOTA_IMPORTANT_UPDATE_TITLE">Important update available</string>
    <string name="STR_FOTA_INSTALL_AUTO_UPDATE_SCHEDULE">This update will be automatically installed on %1$s at %2$s.\n\nYour phone will restart after the update is installed. After restarting, you won\'t receive notifications from some apps until you unlock your phone.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_BACK_UP_DATA">This update shouldn\'t affect your personal data, but it\'s always a good idea to back up your data just in case.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_NOT_USE_DEVICE_DURING_UPDATE">You won\'t be able to use your device during the update.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_NOT_USE_PHONE_DURING_UPDATE">You won\'t be able to use your phone during the update.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_NOT_USE_PHONE_DURING_UPDATE_EMERGENCY_CALL">You won\'t be able to use your phone during the update, even for emergency calls.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_NOT_USE_TABLET_DURING_UPDATE">You won\'t be able to use your tablet during the update.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_NOT_USE_TABLET_DURING_UPDATE_EMERGENCY_CALL">You won\'t be able to use your tablet during the update, even for emergency calls.</string>
    <string name="STR_FOTA_INSTALL_CAUTION_SETTINGS_MAY_CHANGE">Some settings may change after the update.</string>
    <string name="STR_FOTA_INSTALL_CONFIRM_IMPORTANT_UPDATE_TITLE">Important update ready to install</string>
    <string name="STR_FOTA_INSTALL_CONFIRM_TITLE">Update ready to install</string>
    <string name="STR_FOTA_INSTALL_FAIL_TITLE">Couldn\'t install update</string>
    <string name="STR_FOTA_INSTALL_RESTART_DEVICE">Your device will restart after the update is installed.</string>
    <string name="STR_FOTA_INSTALL_RESTART_PHONE">Your phone will restart after the update is installed.</string>
    <string name="STR_FOTA_INSTALL_RESTART_TABLET">Your tablet will restart after the update is installed.</string>
    <string name="STR_FOTA_LAST_UPDATE_DAY_TIME">%1$s at %2$s</string>
    <string name="STR_FOTA_LAST_UPDATE_DESCRIPTION_NODATA">There\'s no information about this update.</string>
    <string name="STR_FOTA_LAST_UPDATE_MENU">Last update</string>
    <string name="STR_FOTA_LAST_UPDATE_TITLE">Last successful update</string>
    <string name="STR_FOTA_LATEST_VERSION">Your software is up to date.</string>
    <string name="STR_FOTA_NO_EXISTING_VERSION">Your current software version isn\'t supported. Visit a service center.</string>
    <string name="STR_FOTA_UPDATE_FAIL_DCM">Try updating using Smart Switch on your computer or contact a docomo shop.</string>
    <string name="STR_FOTA_UPDATE_FAIL_KDI">Try updating using Smart Switch on your computer or contact an au shop or PiPit.</string>
    <string name="STR_FOTA_UPDATE_FAIL_OSP">Try updating using Smart Switch on your computer or contact Customer Service.</string>
    <string name="STR_FOTA_UPDATE_FAIL_TEMPORARILY">There was a problem downloading the update. Try again later.</string>
    <string name="STR_FOTA_UPDATE_FAIL_TITLE">Couldn\'t update</string>
    <string name="STR_FOTA_UPDATE_SUCCESS_DEVICE">Your device has been updated.</string>
    <string name="STR_FOTA_UPDATE_SUCCESS_PHONE">Your phone has been updated.</string>
    <string name="STR_FOTA_UPDATE_SUCCESS_TABLET">Your tablet has been updated.</string>
    <string name="STR_FOTA_UPDATE_SUCEESS_ONEUI">Updated to One UI %s.</string>
    <string name="STR_HEADER_AUTO_INSTALL">Auto install at</string>
    <string name="STR_INSTALL_AUTOMATICALLY">Update will be automatically installed on %1$s at %2$s.</string>
    <string name="STR_INSUFFICIENT_MEMORY_DEVICE">To install this update, you need %s more free space in your device\'s internal storage. Free up some space by uninstalling apps or deleting files, then try again.</string>
    <string name="STR_INSUFFICIENT_MEMORY_PHONE">To install this update, you need %s more free space in your phone\'s internal storage. Free up some space by uninstalling apps or deleting files, then try again.</string>
    <string name="STR_INSUFFICIENT_MEMORY_TABLET">To install this update, you need %s more free space in your tablet\'s internal storage. Free up some space by uninstalling apps or deleting files, then try again.</string>
    <string name="STR_INSUFFICIENT_MEMORY_TITLE">Internal storage full</string>
    <string name="STR_LAST_SCHEDULE">After you set a time to install, you won\'t be able to change it.</string>
    <string name="STR_MODIFIED_DEVICE_KIES">Your device\'s operating system has been modified in an unauthorized way. Try updating using Smart Switch on your computer or visit a Customer Service location.</string>
    <string name="admin_main">Admin main</string>
    <string name="client_auth">Client Auth Type</string>
    <string name="client_id">Client ID</string>
    <string name="client_pwd">Client Password</string>
    <string name="command">Command</string>
    <string name="device_status">Device status</string>
    <string name="dm_settings">DM settings</string>
    <string name="download_and_install">Download and install</string>
    <string name="menu_save">Save</string>
    <string name="profile_name">Profile Name</string>
    <string name="server_address">Server Address</string>
    <string name="server_auth">Server Auth Type</string>
    <string name="server_id">Server ID</string>
    <string name="server_pwd">Server Password</string>
    <string name="sideload">Sideload</string>
</resources>