<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:tag="layout/profile_edit_0"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.idm.fotaagent.enabler.ui.common.ColoredPaddingView
        android:id="@+id/included_window_inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/ProfileLinear"
            android:background="@color/content_background_color"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"/>
            <EditText
                android:textSize="18sp"
                android:id="@+id/profile_name"
                android:tag="binding_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_address"/>
            <EditText
                android:textSize="18sp"
                android:id="@+id/server_address"
                android:tag="binding_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_id"/>
            <EditText
                android:textSize="18sp"
                android:id="@+id/server_id"
                android:tag="binding_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_pwd"/>
            <EditText
                android:textSize="18sp"
                android:id="@+id/server_pwd"
                android:tag="binding_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/server_auth"/>
            <Spinner
                android:id="@+id/server_auth"
                android:tag="binding_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_id"/>
            <EditText
                android:textSize="18sp"
                android:id="@+id/client_id"
                android:tag="binding_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_pwd"/>
            <EditText
                android:textSize="18sp"
                android:id="@+id/client_pwd"
                android:tag="binding_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/client_auth"/>
            <Spinner
                android:id="@+id/client_auth"
                android:tag="binding_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"/>
            <Button
                android:id="@+id/save_btn"
                android:tag="binding_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_save"/>
        </LinearLayout>
    </com.idm.fotaagent.enabler.ui.common.ColoredPaddingView>
</ScrollView>
